# strategy-tester

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
examples/: run_pipeline.py  single_backtest.py
strategy_tester/: __init__.py  anomaly.py  bridge.py  checkpoint.py  cli.py  compare.py  config.py  indicators.py  interfaces.py  io.py  pipeline.py  presets.py  registry.py  report.py  schemas.py
strategy_tester/backtest/: metrics.py  vbt_runner.py
strategy_tester/benchmark/: correlation.py  metrics.py  regime.py
strategy_tester/data/: __init__.py  stale_check.py  weekday_gate.py  yf_bulk_cache.py  yf_retry.py
strategy_tester/detectors/: __init__.py  trendline.py
strategy_tester/hooks/: __init__.py
strategy_tester/s0_features/: __init__.py  bar_loader.py
strategy_tester/s1_screening/: __init__.py  cadf.py  chan_halflife.py  chan_hurst.py  chan_hurst_trend.py  combined.py  johansen.py  kaufman_er.py  kaufman_er_trend.py  kaufman_kama.py  kpss.py  passthrough.py  regime_aware.py  trend_combined.py  variance_ratio.py  vol_cone.py
strategy_tester/s2_optimize/: __init__.py  grid_breakout.py  grid_ma.py  grid_obv_pivot.py  grid_search.py  optuna_ma.py  optuna_tpe.py
strategy_tester/s2_signal/: __init__.py  adx_ema_pullback.py  adx_regime_gate.py  atr_pullback.py  bollinger.py  cointegration_spread.py  consec_down.py  cum_rsi.py  donchian.py  donchian_midline.py  double_bottom.py  dual_ma_crossover.py  ema_crossover.py  halflife_time_decay.py  hl_spread_band.py  kalman_hedge.py  kama_crossover.py  keltner.py  ma_crossover.py  (+15 more)
(+89 files in other folders)
